# phcp-reco

./: .pre-commit-config.yaml  CITATION.cff  ConcatTransformations.py  FlipSessionNiftiHeader.py  FusionBlocs2.py  README.md  pyproject.toml
.hooks/: check-subject-identifiers.sh
B1mapping/: AFI_B1Mapping.py
code/: prepare-published-dataset.py  requirements.txt
dcm2bids/: dcm2bids_11.7T.json  dcm2bids_7T.json  dcm2bids_insitu.json
examples/: publication.yaml
gkg-preprocessing/: BrukerInformationParser.py  PreprocessingPipeline.py
phcp/: BrukerInformationParser.py  T1RelaxometryMapper4.py  T2RelaxometryMapper3.py  T2StarRelaxometryMapper2.py  config.py  fsl.py  gkg.py  image.py  registration.py
phcp/fov_scripts/: AFI_B1mapping.py  BrukerPreprocessing.py  diffusion_pipeline.py  header_flip.py  t1_relaxometry.py  t2_relaxometry.py  t2star_relaxometry.py
phcp/reco_scripts/: blocks_fusion.py  concat_transforms.py  fusion_FOVs_final_space.py
phcp/scripts/: RegistrationType2.py  Unwarp.py  concat_transforms.py  interblock_registration.py  interfov_fusion.py  interfov_registration.py  intrafov_registration.py  prepare_interfov_registration.py  prepare_published_dataset.py  run_interfov_registration.py  transform_and_fuse.py
